--- a/headings.html
+++ b/headings.html
@@ -6,10 +6,10 @@
     </head>
     <body>
         <h1>One</h1>
-        <h2>One</h2>
-        <h3>One</h3>
-        <h4>One</h4>
-        <h5>One</h5>
-        <h6>One</h6>
+        <h2>Two</h2>
+        <h3>Three</h3>
+        <h4>Four</h4>
+        <h5>Five</h5>
+        <h6>Six</h6>
     </body>
 </html>
